--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -606,6 +606,10 @@ img {
     height: 128px;
 }
 
+#dashboard-nav-2 {
+    padding-top: 1rem;
+}
+
 @media screen and ( min-width: 991px) {
 
     #home {
@@ -669,6 +673,7 @@ img {
     }
 
     .nav-login-button-dashboard {
+        width: 10rem;
         margin-left: 1rem;
         margin-right: 1rem;
         margin-bottom: 0;
@@ -698,11 +703,11 @@ img {
     }
 
     #app-main-screen-title {
-        width: 100%;
-        margin-left: 2rem;
-        clear: both;
-        display: inline-block;
-        white-space: nowrap;
+        /*width: 100%;*/
+        /*margin-left: 2rem;*/
+        /*clear: both;*/
+        /*display: inline-block;*/
+        /*white-space: nowrap;*/
     }
 
 }
