--- a/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtClassLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtClassLevel.scala.html
@@ -39,21 +39,9 @@
 } {
     <div class="container">
 
-        <div class="termly-plans-overview-section">
-            <form>
-                <div class="form-row">
-                    <div class="form-group col-md-4"></div>
-                    <div class="form-group col-md-4">
-                        <div class="text-center">
-                            <label for="classLevelInputCurriculumArea">Curriculum Area</label>
-                            <input type="text" class="form-control" id="classLevelInputCurriculumArea" placeholder="@{
-                                curriculumArea.niceSpecificValueIfPresent().getOrElse(curriculumArea.niceValue())
-                            }" disabled="true">
-                        </div>
-                    </div>
-                    <div class="form-group col-md-4"></div>
-                </div>
-            </form>
+        <div class="termly-plans-overview-section-header">
+            <h4 class="text-center group-curriculum-area-header">
+            @curriculumArea.niceSpecificValueIfPresent().getOrElse(curriculumArea.niceValue())</h4>
         </div>
 
         <div>
